Added Sidebar Layout

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     </head>
     <body>
         <div class="flex-container">
-            <div class="sidebar flex"></div>
+            <div class="sidebar flex">
+                <div class="logo"></div>
+                <p class="credit">Photo by Contributer on Site</p>
+            </div>
             <div class="main flex"></div>
         </div>
     </body>
