Added base template for the main content

--- a/index.html
+++ b/index.html
@@ -14,7 +14,35 @@
                 <div class="logo"></div>
                 <p class="credit">Photo by Contributer on Site</p>
             </div>
-            <div class="main flex"></div>
+            <div class="main flex">
+                <p>
+                    This page is just your imagination! You keep wanting it, but
+                    it does not exist, and yet it manifests in front of you.
+                    Sign up <em>now</em> to get started
+                </p>
+                <p>You <em>want</em> to believe this is real, right?</p>
+
+                <form action="">
+                    <div class="form-data">
+                        <label for="">First Name</label>
+                        <input type="text" />
+                        <label for="">Last Name</label>
+                        <input type="text" />
+                        <label for="">Email</label>
+                        <input type="text" />
+                        <label for="">Phone Number</label>
+                        <input type="text" />
+                        <label for="">Password</label>
+                        <input type="text" />
+                        <label for="">Confirm Password</label>
+                        <input type="text" />
+                    </div>
+
+                    <button>Create Account</button>
+                </form>
+
+                <p>Already have an account? <a href="">Log in</a></p>
+            </div>
         </div>
     </body>
 </html>
