--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="logo"></div>
                 <p class="credit">Photo by Contributer on Site</p>
             </div>
-            <div class="main flex">
+            <div class="main flex flex-container">
                 <p>
                     This page is just your imagination! You keep wanting it, but
                     it does not exist, and yet it manifests in front of you.
@@ -22,20 +22,35 @@
                 </p>
                 <p>You <em>want</em> to believe this is real, right?</p>
 
-                <form action="">
-                    <div class="form-data">
-                        <label for="">First Name</label>
-                        <input type="text" />
-                        <label for="">Last Name</label>
-                        <input type="text" />
-                        <label for="">Email</label>
-                        <input type="text" />
-                        <label for="">Phone Number</label>
-                        <input type="text" />
-                        <label for="">Password</label>
-                        <input type="text" />
-                        <label for="">Confirm Password</label>
-                        <input type="text" />
+                <form action="" class="flex-container">
+                    <div class="form-container flex-container">
+                        <div class="form-data flex-container">
+                            <h2>Make it real.</h2>
+                            <div class="field">
+                                <label for="">First Name</label>
+                                <input type="text" />
+                            </div>
+                            <div class="field">
+                                <label for="">Last Name</label>
+                                <input type="text" />
+                            </div>
+                            <div class="field">
+                                <label for="">Email</label>
+                                <input type="text" />
+                            </div>
+                            <div class="field">
+                                <label for="">Phone Number</label>
+                                <input type="text" />
+                            </div>
+                            <div class="field">
+                                <label for="">Password</label>
+                                <input type="text" />
+                            </div>
+                            <div class="field">
+                                <label for="">Confirm Password</label>
+                                <input type="text" />
+                            </div>
+                        </div>
                     </div>
 
                     <button>Create Account</button>
