--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
                 <p class="credit">Photo by Contributer on Site</p>
             </div>
             <div class="main flex flex-container">
-                <p>
+                <p class="introduction">
                     This page is just your imagination! You keep wanting it, but
                     it does not exist, and yet it manifests in front of you.
-                    Sign up <em>now</em> to get started
+                    Sign up <em>now</em> to get started <br /><br />
+                    You <em>want</em> to believe this is real, right?
                 </p>
-                <p>You <em>want</em> to believe this is real, right?</p>
 
-                <form action="" class="flex-container">
-                    <div class="form-container flex-container">
-                        <div class="form-data flex-container">
+                <form action="">
+                    <div class="form-container">
+                        <div class="form-data">
                             <h2>Make it real.</h2>
                             <div class="field">
                                 <label for="">First Name</label>
