--- a/index.html
+++ b/index.html
@@ -11,8 +11,26 @@
     <body>
         <div class="flex-container">
             <div class="sidebar flex">
-                <div class="logo"></div>
-                <p class="credit">Photo by Contributer on Site</p>
+                <div class="logo">
+                    <img
+                        src="https://cdn.statically.io/gh/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png"
+                        height="100%"
+                    />
+                    <p>MIRAGE</p>
+                </div>
+                <p class="credit">
+                    Photo by
+                    <a
+                        href="https://www.pexels.com/@fotios-photos/"
+                        noopener
+                        noreferrer
+                        >Lisa from Pexels</a
+                    >
+                    on
+                    <a href="https://www.pexels.com/" noopener noreferrer
+                        >Pexels</a
+                    >
+                </p>
             </div>
             <div class="main flex flex-container">
                 <p class="introduction">
