Added Validation and Validation Styles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" type="text/css" href="./styles/style.css" />
 
         <title>Sign-up Form</title>
@@ -46,27 +52,37 @@
                             <h2>Make it real.</h2>
                             <div class="field">
                                 <label for="">First Name</label>
-                                <input type="text" />
+                                <input type="text" required />
                             </div>
                             <div class="field">
                                 <label for="">Last Name</label>
-                                <input type="text" />
+                                <input type="text" required />
                             </div>
                             <div class="field">
                                 <label for="">Email</label>
-                                <input type="text" />
+                                <input type="text" required />
                             </div>
                             <div class="field">
                                 <label for="">Phone Number</label>
-                                <input type="text" />
+                                <input type="text" required />
                             </div>
                             <div class="field">
                                 <label for="">Password</label>
-                                <input type="text" />
+                                <input
+                                    class="password"
+                                    type="text"
+                                    pattern="(^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$ %^&*-]).{8,}$)"
+                                    required
+                                />
                             </div>
-                            <div class="field">
+                            <div class="field password">
                                 <label for="">Confirm Password</label>
-                                <input type="text" />
+                                <input
+                                    class="password"
+                                    type="text"
+                                    pattern="(^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$ %^&*-]).{8,}$)"
+                                    required
+                                />
                             </div>
                         </div>
                     </div>
